// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract > does not break on empty call expression (#3) 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 8,
          },
          "start": {
            "column": 2,
            "line": 6,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 11,
          },
          "start": {
            "column": 2,
            "line": 9,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 15,
          },
          "start": {
            "column": 2,
            "line": 13,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 16,
      },
      "start": {
        "column": 4,
        "line": 5,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts aliased imports 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 6,
          },
          "start": {
            "column": 2,
            "line": 4,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 9,
          },
          "start": {
            "column": 2,
            "line": 7,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 13,
          },
          "start": {
            "column": 2,
            "line": 11,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 14,
      },
      "start": {
        "column": 4,
        "line": 3,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts aliased require 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 6,
          },
          "start": {
            "column": 2,
            "line": 4,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 9,
          },
          "start": {
            "column": 2,
            "line": 7,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 13,
          },
          "start": {
            "column": 2,
            "line": 11,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 14,
      },
      "start": {
        "column": 4,
        "line": 3,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts default import 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 6,
          },
          "start": {
            "column": 2,
            "line": 4,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 9,
          },
          "start": {
            "column": 2,
            "line": 7,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 13,
          },
          "start": {
            "column": 2,
            "line": 11,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 14,
      },
      "start": {
        "column": 4,
        "line": 3,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts default require 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 6,
          },
          "start": {
            "column": 2,
            "line": 4,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 9,
          },
          "start": {
            "column": 2,
            "line": 7,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 13,
          },
          "start": {
            "column": 2,
            "line": 11,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 14,
      },
      "start": {
        "column": 4,
        "line": 3,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts destructed require 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 6,
          },
          "start": {
            "column": 2,
            "line": 4,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 9,
          },
          "start": {
            "column": 2,
            "line": 7,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 13,
          },
          "start": {
            "column": 2,
            "line": 11,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 14,
      },
      "start": {
        "column": 4,
        "line": 3,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts named imports 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 6,
          },
          "start": {
            "column": 2,
            "line": 4,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 9,
          },
          "start": {
            "column": 2,
            "line": 7,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 13,
          },
          "start": {
            "column": 2,
            "line": 11,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 14,
      },
      "start": {
        "column": 4,
        "line": 3,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts star import 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 6,
          },
          "start": {
            "column": 2,
            "line": 4,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 9,
          },
          "start": {
            "column": 2,
            "line": 7,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 13,
          },
          "start": {
            "column": 2,
            "line": 11,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 14,
      },
      "start": {
        "column": 4,
        "line": 3,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > extracts ts import mangled 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 8,
          },
          "start": {
            "column": 4,
            "line": 6,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 11,
          },
          "start": {
            "column": 4,
            "line": 9,
          },
        },
        "name": "addition",
      },
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 14,
          },
          "start": {
            "column": 4,
            "line": 12,
          },
        },
        "name": "subtraction",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 15,
      },
      "start": {
        "column": 0,
        "line": 5,
      },
    },
    "name": "math",
  },
]
`;

exports[`extract > works with default cjs import 1`] = `
[
  {
    "children": [],
    "fn": "test",
    "location": {
      "end": {
        "column": 0,
        "line": 3,
      },
      "start": {
        "column": 6,
        "line": 3,
      },
    },
    "name": "addition",
  },
]
`;

exports[`extract > works with default esm import 1`] = `
[
  {
    "children": [],
    "fn": "test",
    "location": {
      "end": {
        "column": 0,
        "line": 3,
      },
      "start": {
        "column": 6,
        "line": 3,
      },
    },
    "name": "addition",
  },
]
`;

exports[`extract > works with string literals 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fn": "it",
        "location": {
          "end": {
            "column": 0,
            "line": 5,
          },
          "start": {
            "column": 8,
            "line": 5,
          },
        },
        "name": "addition",
      },
    ],
    "fn": "describe",
    "location": {
      "end": {
        "column": 0,
        "line": 6,
      },
      "start": {
        "column": 6,
        "line": 4,
      },
    },
    "name": "math",
  },
]
`;
